assignments/07-Expose_Deployment_using_Ingress/solution/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    name: wordpress-deployment
spec:
  selector:
    matchLabels:
     app: wordpress-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress-pod
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
          - containerPort: 80
