assignments/07-Expose_Deployment_using_Ingress/solution/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
spec:
  rules:
  - host: "*.nip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http
